--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,4 @@ theme: jekyll-theme-cayman
 #      path: "assets/img"
 #    values:
 #      image: true
-gems:
-  - jekyll-seo-tag
+url: siddharth858.github.io/
